# arrayref

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
arrayref/: index.html  macro.array_mut_ref!.html  macro.array_ref!.html  macro.array_refs!.html  macro.mut_array_refs!.html  sidebar-items.js
src/: lib.rs  reserve.rs
src/arrayref/: lib.rs.html
